Fixed nav text alignemtn, god knows how. Referenced original codebase, no discernable difference. Copied old code in place of current code in css for @media change above ~750px, problem solved.

--- a/style.css
+++ b/style.css
@@ -254,11 +254,11 @@ ul {
 
 /* Responsiveness */
 
-@media (min-width: 500px) {
+@media (min-width: 768px) {
     .nav {
         max-height: none;
         top: 0;
-        position: absolute;
+        position: relative;
         float: right;
         width: fit-content;
         background-color: transparent;
@@ -277,6 +277,7 @@ ul {
         display: none;
     }
 }
+
 
 
 
